docs(site): add blog post for indirect-web-pwn strategy (#7558)

--- a/site/blog/authors.yml
+++ b/site/blog/authors.yml
@@ -63,3 +63,8 @@ vedantr:
   title: Contributor
   url: https://github.com/vedantr
   image_url: https://github.com/vedantr.png
+
+yash:
+  name: Yash Chhabria
+  title: Security Engineer
+  image_url: /img/team/yash.png
