--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,53 +18,63 @@ concurrency:
 env:
   VITE_TELEMETRY_DISABLED: 1
 jobs:
+  ci-config:
+    name: CI Config
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    outputs:
+      test-matrix: ${{ steps.set-matrix.outputs.test-matrix }}
+      build-matrix: ${{ steps.set-matrix.outputs.build-matrix }}
+    steps:
+      - name: Determine CI matrix
+        id: set-matrix
+        env:
+          EVENT_NAME: ${{ github.event_name }}
+        run: |
+          # Shared entries: all Linux versions + one Windows Node version (sharded)
+          base_entries='
+            {"node":"20.20","os":"ubuntu-latest","shard":""},
+            {"node":"22.22","os":"ubuntu-latest","shard":""},
+            {"node":"24.x","os":"ubuntu-latest","shard":""},
+            {"node":"22.22","os":"windows-latest","shard":1},
+            {"node":"22.22","os":"windows-latest","shard":2},
+            {"node":"22.22","os":"windows-latest","shard":3}
+          '
+
+          if [[ "$EVENT_NAME" == "pull_request" ]]; then
+            # PRs: add 1 macOS version only
+            extra_entries='
+              ,{"node":"22.22","os":"macOS-latest","shard":""}
+            '
+            build_matrix='{"node":["20.20","24.x"]}'
+          else
+            # Main/dispatch: add all macOS versions + remaining Windows shards
+            extra_entries='
+              ,{"node":"20.20","os":"macOS-latest","shard":""},
+              {"node":"22.22","os":"macOS-latest","shard":""},
+              {"node":"20.20","os":"windows-latest","shard":1},
+              {"node":"20.20","os":"windows-latest","shard":2},
+              {"node":"20.20","os":"windows-latest","shard":3},
+              {"node":"24.x","os":"windows-latest","shard":1},
+              {"node":"24.x","os":"windows-latest","shard":2},
+              {"node":"24.x","os":"windows-latest","shard":3}
+            '
+            build_matrix='{"node":["20.20","22.22","24.x"]}'
+          fi
+
+          # Build the matrix JSON (shard:"" is falsy in GHA expressions, used to skip shard flags)
+          test_matrix=$(echo "{\"include\":[${base_entries}${extra_entries}]}" | jq -c .)
+          echo "test-matrix=$test_matrix" >> "$GITHUB_OUTPUT"
+          echo "build-matrix=$build_matrix" >> "$GITHUB_OUTPUT"
+
   test:
+    needs: ci-config
     name: Test on Node ${{ matrix.node }} and ${{ matrix.os }}${{ matrix.shard && format(' (shard {0}/3)', matrix.shard) || '' }}
     timeout-minutes: 10
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
-      matrix:
-        # posthog-node@5.23+ requires Node ^20.20.0 || >=22.22.0
-        node: ['20.20', '22.22', '24.x']
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-        shard: ['']
-        exclude:
-          # Temporarily exclude macOS with Node 24.x due to flaky test failures
-          - node: '24.x'
-            os: macOS-latest
-          # Exclude non-sharded Windows tests (we use sharded versions below)
-          - os: windows-latest
-            shard: ''
-        # Add sharding for Windows to speed up CI (Windows tests are ~2x slower)
-        include:
-          - os: windows-latest
-            node: '20.20'
-            shard: 1
-          - os: windows-latest
-            node: '20.20'
-            shard: 2
-          - os: windows-latest
-            node: '20.20'
-            shard: 3
-          - os: windows-latest
-            node: '22.22'
-            shard: 1
-          - os: windows-latest
-            node: '22.22'
-            shard: 2
-          - os: windows-latest
-            node: '22.22'
-            shard: 3
-          - os: windows-latest
-            node: '24.x'
-            shard: 1
-          - os: windows-latest
-            node: '24.x'
-            shard: 2
-          - os: windows-latest
-            node: '24.x'
-            shard: 3
+      matrix: ${{ fromJSON(needs.ci-config.outputs.test-matrix) }}
 
     steps:
       - name: Checkout repo
@@ -107,10 +117,10 @@ jobs:
         run: npm ci
 
       - name: Test
-        run: npm run test${{ matrix.shard && format(' -- --shard={0}/3', matrix.shard) || '' }}${{ matrix.os == 'ubuntu-latest' && matrix.node == '20.x' && !matrix.shard && ' -- --coverage' || '' }}
+        run: npm run test${{ matrix.shard && format(' -- --shard={0}/3', matrix.shard) || '' }}${{ matrix.os == 'ubuntu-latest' && matrix.node == '20.20' && !matrix.shard && ' -- --coverage' || '' }}
 
       - name: Upload Backend Coverage to Codecov
-        if: matrix.os == 'ubuntu-latest' && matrix.node == '20.x' && !matrix.shard
+        if: matrix.os == 'ubuntu-latest' && matrix.node == '20.20' && !matrix.shard
         uses: codecov/codecov-action@v5
         with:
           files: ./coverage/coverage-final.json
@@ -120,15 +130,14 @@ jobs:
           use_oidc: true
 
   build:
+    needs: ci-config
     name: Build on Node ${{ matrix.node }}
     env:
       PROMPTFOO_POSTHOG_KEY: ${{ secrets.PROMPTFOO_POSTHOG_KEY }}
     timeout-minutes: 5
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        # posthog-node@5.23+ requires Node ^20.20.0 || >=22.22.0
-        node: ['20.20', '22.22', '24.x']
+      matrix: ${{ fromJSON(needs.ci-config.outputs.build-matrix) }}
 
     steps:
       - name: Checkout repo
