--- a/package.json
+++ b/package.json
@@ -82,8 +82,7 @@
     "tsc": "tsc",
     "mcp": "node dist/src/entrypoint.js mcp",
     "depcheck": "depcheck --ignores=\"@types/*,@biomejs/biome,prettier,shx,concurrently,madge,knip,vite,typescript,tshy,gcp-metadata,@opencode-ai/sdk,@actions/core,@actions/exec,@actions/github,@octokit/rest,nock,ink-testing-library,@vitest/coverage-v8\" --ignore-dirs=\"dist,site,examples\"",
-    "hooks:install": "mkdir -p .git/hooks && ln -sf ../../scripts/pre-commit .git/hooks/pre-commit && echo 'Pre-commit hook installed (runs Biome + Prettier on staged files). Set DISABLE_PRECOMMIT_LINT=1 in .env to skip.'",
-    "postinstall": "[ -d .git ] && npm run hooks:install || true"
+    "prepare": "husky || exit 0"
   },
   "overrides": {
     "uri-js": "npm:uri-js-replace",
@@ -148,6 +147,7 @@
     "concurrently": "^9.2.1",
     "depcheck": "^1.4.7",
     "drizzle-kit": "^0.31.9",
+    "husky": "^9.1.7",
     "ibm-cloud-sdk-core": "^5.4.6",
     "ink-testing-library": "^4.0.0",
     "knip": "^5.83.1",
